--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.sanyam.bookifyall.MainActivity">
+    android:id="@+id/drawerLayout"
+    tools:openDrawer="start"
+    >
 
-    <TextView
-        android:layout_width="wrap_content"
+
+<android.support.design.widget.CoordinatorLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        >
+
+        <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:id="@+id/ToolBarRegisterScreen"
+            android:layout_height="?attr/actionBarSize">
+
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="3"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:textColor="#ffffff"
+                    android:textSize="21dp"
+                    android:text="BOOK SHELF"
+                    />
+            </LinearLayout>
+        </android.support.v7.widget.Toolbar>
+
+<!--
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tablayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+-->
+
+    </android.support.design.widget.AppBarLayout>
+
+
+<!--
+
+<android.support.v4.view.ViewPager
+    app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
+    android:layout_width="match_parent"
+    android:id="@+id/viewpager_container"
+    android:layout_height="match_parent" >
+
+-->
+
+<FrameLayout
+
+    app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
+    android:layout_width="match_parent"
+    android:id="@+id/framelayout_container"
+    android:layout_height="match_parent" >
+</FrameLayout>
+
+
+<!--
+ </android.support.v4.view.ViewPager>
+-->
+
+</android.support.design.widget.CoordinatorLayout>
+
+
+<android.support.design.widget.NavigationView
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:id="@+id/navigationView"
+    android:fitsSystemWindows="true"
+    android:layout_gravity="start"
+    app:menu="@menu/navigation_menu"
+   app:headerLayout="@layout/navigation_header"
+
+    />
+
+
+</android.support.v4.widget.DrawerLayout>
