--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="darkOrange">#FFFFB300</color>
+    <color name="heavierDarkOrange">#f09d0e</color>
+    <color name="heavierheavierDarkOrange">#ff6a00</color>
 </resources>
